# ocvqc-py

./: .gitignore  README.md  pyproject.toml  run_deb.py
.github/: dependabot.yml
.github/workflows/: issue-to-project.yaml  pr-title.yml  run_tests.yaml
example_notebooks/: blind_z_gate.ipynb  verified_z_gate.ipynb
ocvqc-py/: example.ipynb  pyproject.toml
ocvqc-py/ocvqc_py/: cnot_grid.py  two_qubit_grover.py
ocvqc-py/tests/: test_cnot_grid.py  test_qubit_manager.py
ocvqc_py/: graph_circuit.py  qubit_manager.py  random_graph.py
pytket-mbqc-env/: pyvenv.cfg
pytket-mbqc-py/: CNOT_grid_experiment.ipynb  example.ipynb  pyproject.toml  run_deb.py
pytket-mbqc-py/example_notebooks/: blind_x_gate.ipynb  blind_z_gate.ipynb  verified_z_gate.ipynb
pytket-mbqc-py/pytket_mbqc_py/: 20240322_MBQC_path_graph_6_qubits_emulator.ipynb  20240322_MBQC_path_graph_n_qubits_emulator.ipynb  __init__.py  cnot_block.py  graph_circuit.py  pytket_mbqc_rus.wasm  qubit_manager.py  random_graph.py  random_register_manager.py  run_path_graph_n_qubits.py  test_run.ipynb  two_qubit_grover.py  wasm_file_handler.py
pytket-mbqc-py/source/: conf.py  graph_circuit.rst  index.rst  qubit_manager.rst  random_register_manager.rst
pytket-mbqc-py/tests/: test_cnot_grid.py  test_graph_circuit.py  test_qubit_manager.py  test_random_identity_grid.py  test_random_register_manager.py  test_two_qubit_grover.py  test_verification.py
pytket-mbqc-rus/: Cargo.toml
pytket-mbqc-rus/src/: lib.rs
source/: graph_circuit.rst  qubit_manager.rst
tests/: test_graph_circuit.py  test_random_identity_grid.py  test_two_qubit_grover.py  test_verification.py
