[tool.poetry]
name = "ocvqc-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.11"
notebook = "^6.5.7"
pytket-quantinuum = "^0.44.0"
pytket_pecos = "^0.1.32"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.9.8"
mypy = "^1.15.0"
importlib-resources = "^6.5.2"
pytest-parallel = "^0.1.1"
py = "^1.11.0"
docstr-coverage = "^2.3.2"
sphinx = "^8.2.3"
sphinx-autodoc-typehints = "^3.1.0"
nbmake = "^1.5.5"
pytket = "1.41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint]
select = ["I001"]
