[tool.poetry]
name = "ocvqc-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.11"
notebook = ">=7.4,<7.5"
pytket-quantinuum = ">=0.53,<0.54"
pytket_pecos = ">=0.2,<0.3"
pytest = ">=8.4,<8.5"
pytest-cov = ">=6.2,<7.1"
ruff = ">=0.12,<0.13"
mypy = ">=1.17,<1.18"
importlib-resources = ">=6.5,<6.6"
pytest-parallel = ">=0.1,<0.2"
py = ">=1.11,<1.12"
docstr-coverage = ">=2.3,<2.4"
sphinx = ">=8.2,<8.3"
sphinx-autodoc-typehints = ">=3.2,<3.3"
nbmake = ">=1.5,<1.6"
pytket = ">=2.9,<2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint]
select = ["I001"]
