[tool.poetry]
name = "pytket-mbqc-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.10"
notebook = "^6.5.0"
pytket-quantinuum = "^0.33.0"
pytket_pecos = "^0.1.15"
pytest = "^8.0.1"
pytest-cov = "^5.0.0"
ruff = "^0.4.2"
mypy = "^1.10.0"
importlib-resources = "^6.1.2"
pytest-parallel = "^0.1.1"
py = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
