[tool.poetry]
name = "pytket-mbqc-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.10"
notebook = "^6.5.7"
pytket-quantinuum = "^0.36.0"
pytket_pecos = "^0.1.29"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
ruff = "^0.5.2"
mypy = "^1.10.1"
importlib-resources = "^6.1.2"
pytest-parallel = "^0.1.1"
py = "^1.11.0"
docstr-coverage = "^2.3.2"
sphinx = "^8.0.2"
sphinx-autodoc-typehints = "^2.2.2"
nbmake = "^1.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint]
select = ["I001"]
